--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,29 @@
-Flask
-matplotlib
-numpy
-scikit-learn
-MultiColumnLabelEncoder
-seaborn
-xgboost
-
+blinker==1.8.2
+click==8.1.7
+colorama==0.4.6
+contourpy==1.3.0
+cycler==0.12.1
+Flask==3.0.3
+fonttools==4.53.1
+itsdangerous==2.2.0
+Jinja2==3.1.4
+joblib==1.4.2
+kiwisolver==1.4.5
+MarkupSafe==2.1.5
+matplotlib==3.9.2
+MultiColumnLabelEncoder==1.1.3
+numpy==2.1.0
+packaging==24.1
+pandas==2.2.2
+pillow==10.4.0
+pyparsing==3.1.4
+python-dateutil==2.9.0.post0
+pytz==2024.1
+scikit-learn==1.5.1
+scipy==1.14.1
+seaborn==0.13.2
+six==1.16.0
+threadpoolctl==3.5.0
+tzdata==2024.1
+Werkzeug==3.0.4
+xgboost==2.1.1
